--- a/src/index.css
+++ b/src/index.css
@@ -65,12 +65,26 @@ p {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #f9f9f9;
+  }
+
+  a {
+    font-weight: 500;
+    color: yellow;
+    text-decoration: inherit;
   }
   a:hover {
-    color: #747bff;
+    color: #ffffff;
   }
   button {
     background-color: #f9f9f9;
+  }
+  
+  h3 {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    font-size: 2.2em;
+    color: black; /* Adjust to a more vibrant yellow */
   }
 }
